testdata/baselines/reference/submodule/conformance/commonJSImportExportedClassExpression.errors.txt
main.js(1,23): error TS2306: File 'mod1.js' is not a module.
main.js(3,12): error TS7006: Parameter 'k' implicitly has an 'any' type.
mod1.js(1,1): error TS2304: Cannot find name 'exports'.


==== main.js (2 errors) ====
    const { K } = require("./mod1");
                          ~~~~~~~~
!!! error TS2306: File 'mod1.js' is not a module.
    /** @param {K} k */
    function f(k) {
               ~
!!! error TS7006: Parameter 'k' implicitly has an 'any' type.
        k.values()
    }
    
==== mod1.js (1 errors) ====
    exports.K = class K {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        values() {
        }
    };
    